# cup

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  NOTICE.md  README.md  build.sh  cup.schema.json  tailwind.config.js
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/: Dockerfile  build-image.yml
.github/actions/build-image/: Dockerfile  action.yml
.github/workflows/: build.yml  ci.yml  docker.yml  docs.yml  nightly.yml  release.yml
cup/: Cargo.toml
cup/src/: auth.rs  docker.rs  image_config.rs  image_to_check.rs  lib.rs  reference.rs  reference_matcher.rs  registry.rs  registry_config.rs  socket.rs
cup/src/version/: date.rs  digest.rs  extended.rs  mod.rs  standard.rs
cup_cli/: Cargo.toml
cup_server/: Cargo.toml
docs/: .prettierignore  .prettierrc  README.md  bun.lockb  eslint.config.mjs  next.config.js  next.config.ts  package.json  pnpm-lock.yaml  styles.css  tailwind.config.js  theme.config.jsx
docs/components/: Card.tsx  GradientText.tsx  GridPattern.tsx  Section.tsx  Step.tsx  Thing.tsx
docs/components/pages/: Home.tsx
docs/pages/: _app.mdx  _document.tsx  _meta.json  about.mdx  index.mdx
docs/pages/docs/: _meta.json  configuration.mdx  contributing.mdx  index.mdx  nightly.mdx  usage.mdx
docs/pages/docs/community-resources/: docker-compose.mdx  homepage-widget.mdx
docs/pages/docs/configuration/: authentication.mdx  insecure-registries.mdx  socket.mdx  theme.mdx
docs/pages/docs/installation/: _meta.json  binary.mdx  docker.mdx
docs/pages/docs/usage/: cli.mdx  server.mdx
docs/src/: mdx-components.ts
docs/src/app/: globals.css  layout.tsx  page.mdx  page.tsx
docs/src/app/[...mdxPath]/: page.tsx
docs/src/app/assets/: GitHubIcon.tsx
docs/src/app/components/: Browser.tsx  Button.tsx  Card.tsx  CopyableCode.tsx  GradientText.tsx  GridPattern.tsx  Head.tsx  Logo.tsx  Section.tsx
docs/src/app/components/pages/: home.tsx  styles.css
docs/src/content/: _meta.ts
docs/src/content/docs/: _meta.ts  contributing.mdx  index.mdx  integrations.mdx  nightly.mdx
docs/src/content/docs/community-resources/: docker-compose.mdx  home-assistant.mdx  homepage-widget.mdx
docs/src/content/docs/configuration/: agent.mdx  authentication.mdx  automatic-refresh.mdx  ignore-registry.mdx  ignore-update-type.mdx  (+6 more)
src/: check.rs  config.rs  docker.rs  formatting.rs  http.rs  image.rs  index.css  logging.rs  main.rs  registry.rs  server.rs  template.liquid  utils.rs
src/formatting/: mod.rs  spinner.rs
src/static/: index.css  template.liquid
src/structs/: image.rs  inspectdata.rs  mod.rs  parts.rs  standard_version.rs  status.rs  update.rs  version.rs
src/utils/: json.rs  link.rs  logging.rs  misc.rs  mod.rs  reference.rs  request.rs  sort_update_vec.rs  time.rs
web/: .gitignore  README.md  bun.lockb  eslint.config.js  index.html  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  index.css  theme.ts  types.ts  utils.ts
web/src/components/: Badge.tsx  Checkbox.tsx  CodeBlock.tsx  DataLoadingError.tsx  Filters.tsx  Image.tsx  LastChecked.tsx  Loading.tsx  Logo.tsx  PullCommand.tsx  RefreshButton.tsx  Search.tsx  Server.tsx  Statistic.tsx  Tooltip.tsx
web/src/components/ui/: Checkbox.tsx  Popover.tsx  Select.tsx  Tooltip.tsx
web/src/hooks/: use-data.tsx
(+6 files in other folders)
